third_party/move/move-compiler-v2/tests/simplifier-elimination/use_before_assign_while.exp
// -- Model dump before bytecode pipeline
module 0x8675309::M {
    private fun tborrow1(cond: bool) {
        {
          let x: u64;
          loop {
            if cond {
              {
                let y: &u64 = Borrow(Immutable)(x);
                _: &u64 = Move(y);
                x: u64 = 0
              }
            } else {
              break
            }
          }
        }
    }
    private fun tborrow2(cond: bool) {
        {
          let x: u64;
          loop {
            if cond {
              {
                let y: &u64 = Borrow(Immutable)(x);
                _: &u64 = Move(y);
                if cond {
                  x: u64 = 0
                } else {
                  Tuple()
                };
                break
              }
            } else {
              break
            }
          }
        }
    }
    private fun tcopy(cond: bool) {
        {
          let x: u64;
          loop {
            if cond {
              {
                let y: u64 = Add<u64>(Move(x), 1);
                if cond {
                  continue
                } else {
                  Tuple()
                };
                x: u64 = 0;
                y;
                Tuple()
              }
            } else {
              break
            }
          }
        }
    }
    private fun tmove(cond: bool) {
        {
          let x: u64;
          loop {
            if cond {
              {
                let y: u64 = Add<u64>(Move(x), 1);
                x: u64 = 0;
                y;
                Tuple()
              }
            } else {
              break
            }
          }
        }
    }
} // end 0x8675309::M


Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/simplifier-elimination/use_before_assign_while.move:9:32
  │
9 │         while (cond) { let y = move x + 1; if (cond) { continue }; x = 0; y; }
  │                                ^^^^^^
  │                                │
  │                                attempted to move here
  │                                used here
